Add id on Cells

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
       </thead>
       <tbody>
         <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
+          <td class="cell" id='0'>Cell</td>
+          <td class="cell" id='1'>Cell</td>
+          <td class="cell" id='2'>Cell</td>
+      </tr>
+      <tr>
+          <td class="cell" id='3'>Cell</td>
+          <td class="cell" id='4'>Cell</td>
+          <td class="cell" id='5'>Cell</td>
+      </tr>
+      <tr>
+          <td class="cell" id='6'>Cell</td>
+          <td class="cell" id='7'>Cell</td>
+          <td class="cell" id='8'>Cell</td>
+      </tr>
       </tbody>
     </table>
   
