--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/0977d37484.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -16,25 +17,27 @@
    
 
  <div class="gameboard-container">
+    <div class="info">
+        <h4 id="player">X's</h4>
+        <p>Turns</p>
+    </div>
   
     <table class="gameboard">
-      <thead>
-      </thead>
       <tbody>
         <tr>
-          <td class="cell" id='0'>Cell</td>
-          <td class="cell" id='1'>Cell</td>
-          <td class="cell" id='2'>Cell</td>
+          <td class="cell" id='0'></td>
+          <td class="cell" id='1'></td>
+          <td class="cell" id='2'></td>
       </tr>
       <tr>
-          <td class="cell" id='3'>Cell</td>
-          <td class="cell" id='4'>Cell</td>
-          <td class="cell" id='5'>Cell</td>
+          <td class="cell" id='3'></td>
+          <td class="cell" id='4'></td>
+          <td class="cell" id='5'></td>
       </tr>
       <tr>
-          <td class="cell" id='6'>Cell</td>
-          <td class="cell" id='7'>Cell</td>
-          <td class="cell" id='8'>Cell</td>
+          <td class="cell" id='6'></td>
+          <td class="cell" id='7'></td>
+          <td class="cell" id='8'></td>
       </tr>
       </tbody>
     </table>
